unpackaged/main/default/objects/CPEC_Request__c/CPEC_Request__c.object-meta.xml
<CustomObject>
    <description>Submission Requests</description>
    <label>CRC Request</label>
    <nameField>
        <displayFormat>CRC-{000000}</displayFormat>
        <label>Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRC Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>