unpackaged/main/default/objects/CPEC_Request__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>