unpackaged/main/default/objects/CPEC_Request__c/fields/Already_has_approval__c.field-meta.xml
<CustomField>
    <fullName>Already_has_approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Already has approval</label>
    <type>Checkbox</type>
</CustomField>