unpackaged/main/default/objects/CPEC_Request__c/fields/Annual_Revenue_of_Contract__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_of_Contract__c</fullName>
    <label>Annual Revenue of Contract</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>