unpackaged/main/default/objects/CPEC_Request__c/fields/Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level__c</fullName>
    <label>Approval Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CRC_Approval_Level</valueSetName>
    </valueSet>
</CustomField>