unpackaged/main/default/objects/CPEC_Request__c/fields/Approval_Methodology__c.field-meta.xml
<CustomField>
    <fullName>Approval_Methodology__c</fullName>
    <label>Approval Methodology</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CRC_Approval_Methodology</valueSetName>
    </valueSet>
</CustomField>