unpackaged/main/default/objects/CPEC_Request__c/fields/Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Approval_Notes__c</fullName>
    <label>Approval Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>