unpackaged/main/default/objects/CPEC_Request__c/fields/Approved_Value__c.field-meta.xml
<CustomField>
    <fullName>Approved_Value__c</fullName>
    <label>Approved Value</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>