unpackaged/main/default/objects/CPEC_Request__c/fields/ARR_Financial_Year_1__c.field-meta.xml
<CustomField>
    <fullName>ARR_Financial_Year_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FY 1</label>
    <referenceTo>CRC_Financial_Year__c</referenceTo>
    <relationshipLabel>CRC Requests</relationshipLabel>
    <relationshipName>CRC_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>