unpackaged/main/default/objects/CPEC_Request__c/fields/ARR_Financial_Year_2__c.field-meta.xml
<CustomField>
    <fullName>ARR_Financial_Year_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FY 2</label>
    <referenceTo>CRC_Financial_Year__c</referenceTo>
    <relationshipLabel>CRC Requests (ARR Financial Year 2)</relationshipLabel>
    <relationshipName>CRC_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>