unpackaged/main/default/objects/CPEC_Request__c/fields/ARR_Financial_Year_3__c.field-meta.xml
<CustomField>
    <fullName>ARR_Financial_Year_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FY 3</label>
    <referenceTo>CRC_Financial_Year__c</referenceTo>
    <relationshipLabel>CRC Requests (ARR Financial Year 3)</relationshipLabel>
    <relationshipName>CRC_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>