unpackaged/main/default/objects/CPEC_Request__c/fields/ARR_FY_2_Value__c.field-meta.xml
<CustomField>
    <fullName>ARR_FY_2_Value__c</fullName>
    <label>FY 2 Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>