unpackaged/main/default/objects/CPEC_Request__c/fields/Concession_Justification__c.field-meta.xml
<CustomField>
    <fullName>Concession_Justification__c</fullName>
    <label>Concession Justification</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>