unpackaged/main/default/objects/CPEC_Request__c/fields/Concession_Term__c.field-meta.xml
<CustomField>
    <fullName>Concession_Term__c</fullName>
    <label>Concession Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>1 year</fullName>
            </value>
            <value>
                <fullName>2 year</fullName>
            </value>
            <value>
                <fullName>3 year</fullName>
            </value>
            <value>
                <fullName>4 year</fullName>
            </value>
            <value>
                <fullName>5 year</fullName>
            </value>
            <value>
                <fullName>once-off</fullName>
            </value>
            <value>
                <fullName>on-going</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>