unpackaged/main/default/objects/CPEC_Request__c/fields/Consultant_Days_Required__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Days_Required__c</fullName>
    <label>Consultant Days Required</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>