unpackaged/main/default/objects/CPEC_Request__c/fields/Consulting_Director__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consulting Director</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>TechnologyOne</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CRC Requests (Consulting Director)</relationshipLabel>
    <relationshipName>CRC_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>