unpackaged/main/default/objects/CPEC_Request__c/fields/Customer_Agreement_to_CRC_Approval__c.field-meta.xml
<CustomField>
    <fullName>Customer_Agreement_to_CRC_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Agreement to CRC Approval</label>
    <type>Checkbox</type>
</CustomField>