unpackaged/main/default/objects/CPEC_Request__c/fields/Customer_Agreement_to_CRC_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Agreement_to_CRC_Approval_Date__c</fullName>
    <label>Customer Agreement to CRC Approval Date</label>
    <type>Date</type>
</CustomField>