unpackaged/main/default/objects/CPEC_Request__c/fields/Customer_Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contract_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Contract Signed</label>
    <type>Checkbox</type>
</CustomField>