unpackaged/main/default/objects/CPEC_Request__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise Licence</fullName>
            </value>
            <value>
                <fullName>On Prem</fullName>
            </value>
            <value>
                <fullName>Perpetual On Cloud</fullName>
            </value>
            <value>
                <fullName>Perpetual On Prem</fullName>
            </value>
            <value>
                <fullName>SaaS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>