unpackaged/main/default/objects/CPEC_Request__c/fields/Department_to_be_Recharged__c.field-meta.xml
<CustomField>
    <fullName>Department_to_be_Recharged__c</fullName>
    <label>Department to be Recharged</label>
    <length>255</length>
    <type>Text</type>
</CustomField>