unpackaged/main/default/objects/CPEC_Request__c/fields/Discount_Percentage_Offered__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage_Offered__c</fullName>
    <label>Discount Percentage Offered</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>