unpackaged/main/default/objects/CPEC_Request__c/fields/Financial_Accountability__c.field-meta.xml
<CustomField>
    <fullName>Financial_Accountability__c</fullName>
    <label>Financial Accountability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consulting Services</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>SaaS</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>