unpackaged/main/default/objects/CPEC_Request__c/fields/Financial_Impact__c.field-meta.xml
<CustomField>
    <fullName>Financial_Impact__c</fullName>
    <label>Financial Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CRC_Financial_Impact</valueSetName>
    </valueSet>
</CustomField>