unpackaged/main/default/objects/CPEC_Request__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <defaultValue>&quot;NA&quot;</defaultValue>
    <inlineHelpText>Carries the Invoice Number related to the Deferred/delayed Payment</inlineHelpText>
    <label>Invoice Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>