unpackaged/main/default/objects/CPEC_Request__c/fields/Item_Details__c.field-meta.xml
<CustomField>
    <fullName>Item_Details__c</fullName>
    <label>Request Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>