unpackaged/main/default/objects/CPEC_Request__c/fields/Justification_Type__c.field-meta.xml
<CustomField>
    <fullName>Justification_Type__c</fullName>
    <label>Justification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CRC_Justification</valueSetName>
    </valueSet>
</CustomField>