unpackaged/main/default/objects/CPEC_Request__c/fields/No_of_Actions__c.field-meta.xml
<CustomField>
    <fullName>No_of_Actions__c</fullName>
    <label>No of Actions</label>
    <summaryForeignKey>CRC_Request_Action__c.CRC_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>