unpackaged/main/default/objects/CPEC_Request__c/fields/No_of_Approvals__c.field-meta.xml
<CustomField>
    <fullName>No_of_Approvals__c</fullName>
    <label>No of Approvals</label>
    <summaryForeignKey>CRC_Request_Approval__c.CRC_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>