unpackaged/main/default/objects/CPEC_Request__c/fields/Non_billable_Category__c.field-meta.xml
<CustomField>
    <fullName>Non_billable_Category__c</fullName>
    <label>Non-billable Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>