unpackaged/main/default/objects/CPEC_Request__c/fields/Outstanding_Actions__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Actions__c</fullName>
    <label>Outstanding Actions</label>
    <summaryFilterItems>
        <field>CRC_Request_Action__c.Completed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>CRC_Request_Action__c.CRC_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>