unpackaged/main/default/objects/CPEC_Request__c/fields/Outstanding_Approvals__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Approvals__c</fullName>
    <label>Outstanding Approvals</label>
    <summaryFilterItems>
        <field>CRC_Request_Approval__c.Endorsed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>CRC_Request_Approval__c.CRC_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>