unpackaged/main/default/objects/CPEC_Request__c/fields/Prepared_By__c.field-meta.xml
<CustomField>
    <fullName>Prepared_By__c</fullName>
    <label>Prepared By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>