unpackaged/main/default/objects/CPEC_Request__c/fields/Project_Budget_Data__c.field-meta.xml
<CustomField>
    <fullName>Project_Budget_Data__c</fullName>
    <label>Project Budget Data</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>