unpackaged/main/default/objects/CPEC_Request__c/fields/Project_Management_Days_Required__c.field-meta.xml
<CustomField>
    <fullName>Project_Management_Days_Required__c</fullName>
    <label>Project Management Days Required</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>