unpackaged/main/default/objects/CPEC_Request__c/fields/Project_Methodology__c.field-meta.xml
<CustomField>
    <fullName>Project_Methodology__c</fullName>
    <label>Project Methodology</label>
    <length>255</length>
    <type>Text</type>
</CustomField>