unpackaged/main/default/objects/CPEC_Request__c/fields/Project_Related__c.field-meta.xml
<CustomField>
    <fullName>Project_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Related</label>
    <type>Checkbox</type>
</CustomField>