unpackaged/main/default/objects/CPEC_Request__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>