unpackaged/main/default/objects/CPEC_Request__c/fields/Rationale_for_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Rationale_for_Recommendation__c</fullName>
    <label>Rationale for Recommendation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>