unpackaged/main/default/objects/CPEC_Request__c/fields/Regional_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>TechnologyOne</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CRC Requests (Regional Manager)</relationshipLabel>
    <relationshipName>CRC_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>