unpackaged/main/default/objects/CPEC_Request__c/fields/Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Request_Status__c</fullName>
    <label>Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campaign Approval</fullName>
            </value>
            <value>
                <fullName>CRC Presentation</fullName>
            </value>
            <value>
                <fullName>CRC Approved for Implementation</fullName>
            </value>
            <value>
                <fullName>CRC Conditional Approval</fullName>
            </value>
            <value>
                <fullName>CRC Denied</fullName>
            </value>
            <value>
                <fullName>Customer Accepted (Closed)</fullName>
            </value>
            <value>
                <fullName>Executive Response Approval</fullName>
            </value>
            <value>
                <fullName>Positional Delegation Approval</fullName>
            </value>
            <value>
                <fullName>No Longer Required - Withdrawn</fullName>
            </value>
            <value>
                <fullName>Request Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>