unpackaged/main/default/objects/CPEC_Request__c/fields/Request_URL__c.field-meta.xml
<CustomField>
    <fullName>Request_URL__c</fullName>
    <formula>$Setup.T1_Control_Settings__c.Internal_URL__c &amp; &quot;/lightning/r/CPEC_Request__c/&quot; &amp; Id &amp; &quot;/view&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request URL</label>
    <type>Text</type>
</CustomField>