unpackaged/main/default/objects/CPEC_Request__c/fields/Requested_By_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_First_Name__c</fullName>
    <formula>Requested_By__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested By First Name</label>
    <type>Text</type>
</CustomField>