unpackaged/main/default/objects/CPEC_Request__c/fields/Requested_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_Name__c</fullName>
    <formula>Requested_By__r.FirstName + &#39; &#39; + Requested_By__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested By Name</label>
    <type>Text</type>
</CustomField>