unpackaged/main/default/objects/CPEC_Request__c/fields/Requested_By_Title__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_Title__c</fullName>
    <formula>Requested_By__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested By Title</label>
    <type>Text</type>
</CustomField>