unpackaged/main/default/objects/CPEC_Request__c/fields/Requester_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Requester_Business_Unit__c</fullName>
    <label>Requester Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CRC_Business_Unit</valueSetName>
    </valueSet>
</CustomField>