unpackaged/main/default/objects/CPEC_Request__c/fields/Revenue_Impact__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Impact__c</fullName>
    <label>Revenue Impact</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>