unpackaged/main/default/objects/CPEC_Request__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CRC_Root_Cause</valueSetName>
    </valueSet>
</CustomField>