unpackaged/main/default/objects/CPEC_Request__c/fields/Total_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Value__c</fullName>
    <label>Total Contract Value</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>