unpackaged/main/default/objects/CPEC_Request__c/fields/Works_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Works_Project_Number__c</fullName>
    <label>Works Project Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>