unpackaged/main/default/objects/CPEC_Request__c/fields/Years_Remaining_in_Contract__c.field-meta.xml
<CustomField>
    <fullName>Years_Remaining_in_Contract__c</fullName>
    <label>Years Remaining in Contract</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>