unpackaged/main/default/objects/CPEC_Request__c/validationRules/ApprovedValuematchesFYARRImpact.validationRule-meta.xml
<ValidationRule>
    <fullName>ApprovedValuematchesFYARRImpact</fullName>
    <active>true</active>
    <errorConditionFormula>(NULLVALUE( ARR_FY_1_Value__c , 0)+ NULLVALUE( ARR_FY_2_Value__c , 0)+ NULLVALUE( ARR_FY_3_Value__c , 0)+ NULLVALUE( ARR_FY_4_Value__c , 0)+ NULLVALUE( ARR_FY_5_Value__c , 0))  &lt;&gt;  NULLVALUE(Approved_Value__c, 0) &amp;&amp; NOT($Setup.T1_Control_Settings__c.Bypass_Validation_Rules__c)</errorConditionFormula>
    <errorMessage>Approved Value does not match the total of the values nominated for FY Impact to ARR</errorMessage>
</ValidationRule>