unpackaged/main/default/objects/CPEC_Request__c/validationRules/ConfirmApprovalssPriorToApproval.validationRule-meta.xml
<ValidationRule>
    <fullName>ConfirmApprovalssPriorToApproval</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Request_Status__c )
&amp;&amp; ISPICKVAL(Request_Status__c, &#39;Approved&#39;)   
			&amp;&amp; Outstanding_Approvals__c &gt; 0
			&amp;&amp; NOT($Setup.T1_Control_Settings__c.Bypass_Validation_Rules__c)</errorConditionFormula>
    <errorMessage>Cannot Approve whilst there are outstanding Approvals.</errorMessage>
</ValidationRule>