unpackaged/main/default/objects/CPEC_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Customer_Status__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Request_Value__c</columns>
    <columns>Approved_Value__c</columns>
    <columns>Requester_Business_Unit__c</columns>
    <columns>Customer_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>